--- a/style.css
+++ b/style.css
@@ -191,3 +191,44 @@ form {
     text-align: center;
     font-size: 30px;
 }
+
+a {
+    text-decoration: none;
+   color: white;
+}
+
+.createuserbox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    width: 300px;
+    margin-left: 40%;
+    background-color: #f6f3fb;
+    border-radius: 10px;
+    padding: 20px;
+    margin-top: 20px;
+}
+
+#username {
+    width: 184px;
+}
+
+#password {
+    width: 184px;
+    margin-left: 3px;
+}
+
+#email { 
+    width: 184px;
+    margin-left: 31px;
+}
+
+#saveUser {
+    width: 260px;
+    margin-top: 20px;
+    height: 30px;
+    background-color: #612330;
+    color: white;
+    font-size: 17px;
+}
