--- a/style.css
+++ b/style.css
@@ -102,6 +102,11 @@ li{
     border-radius: 6px;
     padding: 3px;
 }
+.page {
+ display: flex;
+ flex-direction: column;
+ gap: 23px;
+}
 .item {
 
 margin-top: 10px;
@@ -195,40 +200,4 @@ form {
 a {
     text-decoration: none;
    color: white;
-}
-
-.createuserbox {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    width: 300px;
-    margin-left: 40%;
-    background-color: #f6f3fb;
-    border-radius: 10px;
-    padding: 20px;
-    margin-top: 20px;
-}
-
-#username {
-    width: 184px;
-}
-
-#password {
-    width: 184px;
-    margin-left: 3px;
-}
-
-#email { 
-    width: 184px;
-    margin-left: 31px;
-}
-
-#saveUser {
-    width: 260px;
-    margin-top: 20px;
-    height: 30px;
-    background-color: #612330;
-    color: white;
-    font-size: 17px;
 }
