--- a/loginstyle.css
+++ b/loginstyle.css
@@ -116,13 +116,22 @@ form {
   flex-direction: column;
 }
 h2 {
+  text-align: center;
+  font-size: 30px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  color: #ad0850;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+
 }
 
 .createuserbox {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
+  gap: 15px;
   width: 399px;
   margin-left: 35%;
   background-color: #f6f3fb;
@@ -132,19 +141,7 @@ h2 {
  
 }
 
-#username {
-  width: 184px;
-}
 
-#password {
-  width: 184px;
-  
-}
-
-#email {
-  width: 184px;
- 
-}
 
 #saveUser {
   width: 260px;
@@ -154,3 +151,21 @@ h2 {
   color: white;
   font-size: 17px;
 }
+
+p {
+  text-align: center;
+  font-size: 15px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  color: #757575;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 200;
+}
+
+.createuserbox a {
+  color: #b11247;
+  text-align: center;
+  margin-left: 60px;
+}
+
